# pdm-sync-commit-lock-error-jul-24

./: .pre-commit-config.yaml  README.md  pyproject.toml
